--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
             </a>
             <a class="navbar-item" href="https://github.com/uni-medical/SAM-Med3D/">
               SAM-Med3D 
+            </a>
               <a class="navbar-item" href="https://github.com/OpenGVLab/Multi-Modality-Arena/">
                 OmniMedVQA
               </a>
-            </a>
+              <a class="navbar-item" href="https://uni-medical.github.io/SlideChat.github.io/">
+                SlideChat
+              </a>
             
             </a>
           </div>
